rbac updated, dashboard api na lang kulang